# ngt-memory

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README_RU.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
api/: config.py  logging_config.py  main.py  models.py  session_store.py  session_store_base.py
api/billing/: key_manager.py  middleware.py  models.py  stripe_handler.py
docs/: SITE_TZ.md  SITE_UPDATE_TZ_2026-03.md  ТЗ_лендинг_NGT_Memory.md
experiments/: 49_profile_edge_cases.py
ngt/: __init__.py
ngt/core/: __init__.py  association_graph.py  concept_extractor.py  decay.py  graph.py  graph_memory.py  hebbian.py  hierarchical_memory.py  llm_memory.py  llm_wrapper.py  memory.py  memory_entry.py  user_profile.py
tests/: __init__.py  test_concept_extractor.py  test_conversational_memory.py  test_llm_memory.py
